# ampache_browser

./: .gitignore  .hgignore  AUTHORS  CMakeLists.txt  INSTALL  Makefile  NEWS  README.md  ampache_browser-config.cmake.cmakein  ampache_browser.pc.cmakein  cmake_uninstall.cmake.cmakein
include/: CMakeLists.txt  settings.h
include/application/: album_model.h  ampache_browser.h  data_loader.h
include/application/models/: album_model.h  artist_model.h  names_model.h  track_model.h
include/data/: CMakeLists.txt  album_repository.h  ampache_service.h  artist_repository.h  indices.h  provider_type.h  track_repository.h
include/data/cache/: cache.h
include/data/filters/: album_artist_filter.h  album_filter_for_tracks.h  album_name_filter.h  album_unfiltered_filter.h  artist_filter_for_albums.h  artist_filter_for_tracks.h  filter.h  name_filter_for_albums.h  name_filter_for_artists.h  name_filter_for_tracks.h  unfiltered_filter.h
include/data/providers/: ampache.h  ampache_service.h  cache.h
include/data/repositories/: album_repository.h  artist_repository.h  repository.h  track_repository.h
include/domain/: album.h  artist.h  track.h
include/infrastructure/: event.h  os_paths.h
include/infrastructure/event/: delegate.h  event.h
include/internal/application/: CMakeLists.txt  ampache_browser_app.h  application.h  application_qt_internal.h  qt_application_internal.h  settings_internal.h
include/internal/application/models/: album_model.h  artist_model.h  track_model.h
include/internal/data/filters/: album_filter_for_tracks.h  artist_filter_for_albums.h  artist_filter_for_tracks.h  filter.h  name_filter_for_albums.h  name_filter_for_artists.h  name_filter_for_tracks.h
include/internal/data/providers/: ampache.h  cache.h  connection_info.h
include/internal/data/repositories/: album_repository.h  artist_repository.h  repository.h  track_repository.h
include/internal/domain/: album.h  artist.h  track.h
include/internal/infrastructure/: filesystem.h  i18n.h  os_paths.h  string_encoding.h
include/internal/infrastructure/event/: delegate.h  event.h
include/internal/infrastructure/logging/: log_level.h  logging.h
include/internal/infrastructure/logging/qt_logger/: qt_logger.h
include/internal/ui/: ui.h
include/public/: CMakeLists.txt
include/public/ampache_browser/: ampache_browser.h  application_qt.h  qt_application.h  settings.h
include/ui/: ampache_browser_main_window.h  selected_items.h  ui.h
src/: CMakeLists.txt  ampache_browser.cc  ampache_browser_plugin.cc  ampache_browser_plugin.cpp  application_qt.cc  main.cpp  qt_application.cc  settings.cc
src/application/: album_model.cpp  ampache_browser.cc  ampache_browser.cpp  ampache_browser_app.cc  ampache_service.cpp  ampache_service.h  application.cc  application_qt_internal.cc  data_loader.cc  filtering.cc  filtering.h  managed_ampache_service.cpp  managed_ampache_service.h  qt_application_internal.cc  request_group.cpp  request_group.h  request_groups.cpp  request_groups.h  request_tracker.cpp  request_tracker.h  requests.cpp  requests.h  settings_internal.cc
src/application/models/: album_model.cc  album_model.cpp  artist_model.cc  artist_model.cpp  names_model.cpp  request_group.cc  request_group.h  request_groups.cc  request_groups.cpp  request_groups.h  requests.cc  requests.cpp  requests.h  track_model.cc  track_model.cpp
src/data/: CMakeLists.txt  album_data.cpp  album_data.h  album_repository.cc  album_repository.cpp  ampache_service.cpp  artist_data.cpp  artist_data.h  artist_repository.cc  artist_repository.cpp  index_types.h  indices.cc  indices.cpp  track_data.cpp  track_data.h  track_repository.cc  track_repository.cpp
src/data/cache/: cache.cpp
src/data/data_objects/: album_data.cc  album_data.cpp  album_data.h  artist_data.cc  artist_data.cpp  artist_data.h  track_data.cc  track_data.cpp  track_data.h
src/data/filters/: album_artist_filter.cpp  album_artist_filter.h  album_filter_for_tracks.cc  album_filter_for_tracks.cpp  album_name_filter.cpp  album_unfiltered_filter.cpp  artist_filter_for_albums.cc  artist_filter_for_albums.cpp  artist_filter_for_tracks.cc  artist_filter_for_tracks.cpp  filter.cc  filter.cpp  filter.h  name_filter_for_albums.cc  name_filter_for_albums.cpp  name_filter_for_artists.cc  name_filter_for_artists.cpp  name_filter_for_tracks.cc  name_filter_for_tracks.cpp  unfiltered_filter.cc  unfiltered_filter.cpp
src/data/providers/: CMakeLists.txt  ampache_service.cc  ampache_service.cpp  ampache_url.cc  ampache_url.h  cache.cc  cache.cpp  connection_info.cc
src/data/providers/ampache/: ampache.cc  ampache_url.cc  ampache_url.h  scale_album_art_runnable.cc  scale_album_art_runnable.h
src/data/repositories/: album_repository.cc  artist_repository.cc  repository.cc  track_repository.cc
src/domain/: album.cc  album.cpp  artist.cc  artist.cpp  track.cc  track.cpp
src/infrastructure/: CMakeLists.txt  event.cpp  filesystem.cc  os_paths.cc  string_encoding.cc
src/infrastructure/event/: delegate.cc  delegate_void.cc  event.cc  event.cpp  event_void.cc
src/infrastructure/logging/: CMakeLists.txt  logging.cc
src/infrastructure/logging/qt_logger/: qt_logger.cc  set_qt_logger_default_message_pattern.cc  set_qt_logger_default_message_pattern.h
src/ui/: ampache_browser_main_window.cc  ampache_browser_main_window.cpp  ampache_browser_main_window.h  custom_proxy_style.cc  custom_proxy_style.h  selected_items.cc  settings_dialog.cc  settings_dialog.h  ui.cc  ui.cpp
